--- a/index_en.html
+++ b/index_en.html
@@ -256,6 +256,22 @@
         <div class="row portfolio-container" style="position: relative; height: 437.75px;">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
             <center>
+              <h4>Work Center Training [WCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/WorkCenterTraining1.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Training details"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
               <h4>Basic Life Support</h4>
             </center>
             <div class="portfolio-wrap">
@@ -294,7 +310,7 @@
 
                 <div class="portfolio-links">
                   <a href="training/WorkCenterTraining.html" data-gall="portfolioDetailsGallery"
-                    data-vbtype="iframe" class="venobox" title="Detalls de la formació"><i
+                    data-vbtype="iframe" class="venobox" title="Training details"><i
                       class="bx bx-info-circle"></i></a>
                 </div>
               </div>
@@ -498,51 +514,73 @@
         <h2>Skills</h2>
       </div>
       <div class="row">
-        <div class="col-lg-12" data-aos="fade-up">
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
-            <h4 style="text-align:left;color:#09203a">Lenguajes and Databases</h4>
-            <p style="text-align:left;">
-              <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg"
-                  alt="vectorlogo.zone" height="50" width="120"></a>
-              <a href="https://html.spec.whatwg.org/"><img
-                  src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
-              <a href="https://www.w3.org/Style/CSS/"><img
-                  src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
-                  alt="upload.wikimedia.org" height="60" width="90"></a>
-              <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg"
-                  alt="vectorlogo.zone" height="70" width="130"></a>
-              <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg"
-                  alt="vectorlogo.zone" height="70" width="130"></a>
-              <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg"
-                  alt="vectorlogo.zone" height="70" width="130"></a>
-              <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
-                  alt="vectorlogo.zone" height="50" width="190"></a>
-
-            </p>
-          </div>
-          <!--<div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Frameworks</h4>
-                <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/opencv/opencv-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="upload.wikimedia.org" width="90" height="70">
+        <div class="row">
+          <div class="col-lg-12" data-aos="fade-up">
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+              <h4 style="text-align:left;color:#09203a">Programming Languages</h4>
+              <p style="text-align:left;">
+                <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg"
+                    alt="vectorlogo.zone" height="50" width="120"></a>
+                <a href="https://kotlinlang.org/"><img
+                    src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-ar21.svg" alt="vectorlogo.zone"
+                    height="90" width="120"></a>
+                <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
+                    alt="vectorlogo.zone" height="50" width="190"></a>
+                <a href="https://www.javascript.com/"><img
+                    src="https://www.vectorlogo.zone/logos/javascript/javascript-ar21.svg" alt="vectorlogo.zone"
+                    height="70" width="120"></a>
               </p>
-          </div>
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-              <h4 style="text-align:left;color:#09203a">Tools</h4>
-                <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
+            </div>
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+              <h4 style="text-align:left;color:#09203a">Markup Languages</h4>
+              <p style="text-align:left;">
+                <a href="https://html.spec.whatwg.org/"><img
+                    src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
+                <a href="https://www.w3.org/Style/CSS/"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
+                    alt="upload.wikimedia.org" height="60" width="90"></a>
+                <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg"
+                    alt="vectorlogo.zone" height="70" width="130"></a>
               </p>
-          </div>-->
+            </div>
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+              <h4 style="text-align:left;color:#09203a">Databases</h4>
+              <p style="text-align:left;">
+                <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg"
+                    alt="vectorlogo.zone" height="70" width="130"></a>
+                <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg"
+                    alt="vectorlogo.zone" height="70" width="130"></a>
+              </p>
+            </div>
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+              <h4 style="text-align:left;color:#09203a">Source Code Editor</h4>
+              <p style="text-align:left;">
+                <a href="https://code.visualstudio.com/"><img
+                    src="https://www.vectorlogo.zone/logos/visualstudio_code/visualstudio_code-ar21.svg"
+                    alt="vectorlogo.zone" height="70" width="120"></a>
+                <a href="https://brackets.io/"><img src="https://www.vectorlogo.zone/logos/bracketsio/bracketsio-ar21.svg"
+                    alt="upload.wikimedia.org" height="90" width="120"></a>
+                <a href="https://www.sublimetext.com//"><img
+                    src="https://img.icons8.com/fluency/48/000000/sublime-text.png" alt="img.icons8.com" height="60"
+                    width="60"></a>
+                <a href="https://notepad-plus-plus.org/"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/6/69/Notepad%2B%2B_Logo.svg"
+                    alt="upload.wikimedia.org" height="60" width="60"></a>
+              </p>
+            </div>
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+              <h4 style="text-align:left;color:#09203a">Integrated Development Environment (IDE)</h4>
+              <p style="text-align:left;">
+                <a href="https://netbeans.apache.org/"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/9/98/Apache_NetBeans_Logo.svg"
+                    alt="upload.wikimedia.org" height="60" width="90"></a>
+                <a href="https://developer.android.com/studio"><img
+                    src="https://img.icons8.com/color/48/000000/android-studio--v3.png" alt="commons.wikimedia.org"
+                    height="60" width="6  0"></a>
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
   </section>
 
