--- a/training/FormacioCentreTreball1.html
+++ b/training/FormacioCentreTreball1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Formació en Centre de Treball - Codelearn</title>
+    <title>Formació en Centre de Treball - Happy Customer Box</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -47,16 +47,17 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Formació en Centre de Treball - Codelearn</h2>
+                        <h2 style="color:#12d640">Formació en Centre de Treball [FCT]</h2>
                         <ul>
-                            <li><strong>Centre</strong>: Codelearn Terrassa</li>
-                            <li><strong>Data</strong>: Octubre 2019 - Març 2020</li>
-                            <li><strong>Lloc Web</strong>: <a href="https://codelearn.cat/terrassa/" target="_blank">Enllaç</a></li>
-                            <li><strong>Memòria</strong>: <a href="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview"
-                                    target="_blank">Enllaç</a></li>
+                            <li><strong>Centre</strong>: Happy Customer Box</li>
+                            <li><strong>Data</strong>: Octubre 2021 - Actualitat</li>
+                            <li><strong>Lloc Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enllaç</a></li>
                         </ul>
-                        <iframe src="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview" height="500px" width="100%"></iframe>
-                    
+
+                        <p>
+                            Hapy Customer Box és una start-up tecnològica que ajuda a gestionar l'opinió dels clients.<br>
+                            Creuen en les dades, ajuden a obtenir-les i processar-les.
+                        </p>
                     </div>
                    
 
