--- a/training/FormacionCentroTrabajo.html
+++ b/training/FormacionCentroTrabajo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Formación en Centro de Trabajo [FCT]</title>
+    <title>Formación en Centro de Trabajo - Codelearn</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Formación en Centro de Trabajo [FCT]</h2>
+                        <h2 style="color:#12d640">Formación en Centro de Trabajo - Codelearn</h2>
                         <ul>
                             <li><strong>Centro</strong>: Codelearn Terrassa</li>
                             <li><strong>Fecha</strong>: Octubre 2019  - Marzo  2020</li>
