--- a/training/WorkCenterTraining.html
+++ b/training/WorkCenterTraining.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Work Center Training [WCT]</title>
+    <title>Work Center Training - Codelearn</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Work Center Training [WCT]</h2>
+                        <h2 style="color:#12d640">Work Center Training - Codelearn</h2>
                         <ul>
                             <li><strong>Center</strong>: Codelearn Terrassa</li>
                             <li><strong>Date</strong>: October 2019 - March 2020</li>
