--- a/training/FormacionCentroTrabajo1.html
+++ b/training/FormacionCentroTrabajo1.html
@@ -1,10 +1,10 @@
-<html lang="ca">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Formació en Centre de Treball - Codelearn</title>
+    <title>Formación en Centro de Trabajo - Happy Customer Box</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -47,21 +47,22 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Formació en Centre de Treball - Codelearn</h2>
+                        <h2 style="color:#12d640">Formación en Centro de Trabajo - Happy Customer Box</h2>
                         <ul>
-                            <li><strong>Centre</strong>: Codelearn Terrassa</li>
-                            <li><strong>Data</strong>: Octubre 2019 - Març 2020</li>
-                            <li><strong>Lloc Web</strong>: <a href="https://codelearn.cat/terrassa/" target="_blank">Enllaç</a></li>
-                            <li><strong>Memòria</strong>: <a href="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview"
-                                    target="_blank">Enllaç</a></li>
+                            <li><strong>Centro</strong>: Happy Customer Box</li>
+                            <li><strong>Fecha</strong>: Octubre 2021 - Actualidad</li>
+                            <li><strong>Sitio Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enlace</a></li>
                         </ul>
-                        <iframe src="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview" height="500px" width="100%"></iframe>
-                    
+                        <p>
+                            Hapy Customer Box es una start-up tecnológica que ayuda a gestionar la opinión de los clientes.<br>
+                            Creen en los datos, ayudan a obtenerlos y procesarlos.
+                        </p>
                     </div>
-                   
 
                 </div>
-            </div><!-- End Portfolio Details -->
+
+            </div>
+        </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
 
     <!-- Vendor JS Files -->
