--- a/index.html
+++ b/index.html
@@ -76,15 +76,12 @@
           <li><a href="#about"><span>Sobre Mi</span></a></li>
           <li><a href="#education"> <span>Educación</span></a></li>
           <li><a href="#experience"> <span>Experiencia</span></a></li>
-          <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-          <li><a href="#portfolio"> <span>Proyectos</span></a></li>
-          <li><a href="#skills"> <span>Habilidades</span></a></li>
-          <!--<li><a href="https://drive.google.com/file/d/1KQTdX3TeigHwbWjrR1VAJyQGDjH2xe35/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>-->
-          <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
+          <li><a href="#projects"> <span>Proyectos</span></a></li>
+          <li><a href="#skills"> <span>Conocimientos</span></a></li>
           <li><a href="#contacts"> <span>Contacto</span></a></li>
-          <li><a href="index_ca.html" style="font-size:14px"><span>ca</span></a></li>
+          <li><a href="ca.html" style="font-size:14px"><span>ca</span></a></li>
           <li><a href="index.html" style="font-size:14px"><span>es</span></a></li>
-          <li><a href="index_en.html" style="font-size:14px"> <span>en</span></a></li>
+          <li><a href="en.html" style="font-size:14px"> <span>en</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -379,7 +376,7 @@
 
 
   <!-- Start Project Section -->
-  <section id="portfolio" class="portfolio">
+  <section id="projects" class="portfolio">
     <div class="container">
 
       <div class="section-title">
@@ -515,7 +512,7 @@
   <section id="skills" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Habilidades</h2>
+        <h2>Conocimientos</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
@@ -579,7 +576,7 @@
                   alt="upload.wikimedia.org" height="60" width="90"></a>
               <a href="https://developer.android.com/studio"><img
                   src="https://img.icons8.com/color/48/000000/android-studio--v3.png" alt="commons.wikimedia.org"
-                  height="60" width="6  0"></a>
+                  height="60" width="60"></a>
             </p>
           </div>
         </div>
@@ -588,41 +585,6 @@
   </section>
 
   <!-- End Skills Section -->
-
-
-
-
-  <!-- Start Links section -->
-  <section id="links" class="services">
-    <div class="container">
-      <div class="section-title">
-        <h2>Resume & Links</h2>
-      </div>
-      <div class="row">
-        <!--<div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1gsmx5TrbdiystA_UKrhyV-pdjKAIT_xB/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1gsmx5TrbdiystA_UKrhyV-pdjKAIT_xB/view?usp=sharing" target="_blank">Resume</a></h4>
-          <p class="description" style="color:#fff;">The link contains downloadable resume</p>
-        </div>-->
-        <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
-          <a href="https://github.com/rajaprerak/LeetCode_Problems" target="_blank">
-            <div class="icon"><i class="icofont-link"></i></div>
-          </a>
-          <h4 class="title"><a href="https://github.com/rajaprerak/LeetCode_Problems" target="_blank">LeetCode
-              Repository</a></h4>
-          <p class="description" style="color:#fff;"> The github repository contains leetcode problems solution in
-            python.</p>
-        </div>
-        <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://techingenious.herokuapp.com/" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://techingenious.herokuapp.com/" target="_blank">Blog</a></h4>
-          <p class="description" style="color:#fff;">Blog containing articles on AI, coding, development</p>
-        </div> -->
-      </div>
-    </div>
-  </section>
-  <!--End Links Section -->
-
 
   <!-- Start Contact Section -->
 
@@ -670,7 +632,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>jaumecadafalchmiro@gmail.com</p>
+            <p><a href="mailto:jaumecadafalchmiro@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a><br></p>
           </div>
         </div>
         <!--<div class="col-md-6 mt-4 d-flex align-items-stretch">
