--- a/training/WorkCenterTraining.html
+++ b/training/WorkCenterTraining.html
@@ -51,7 +51,7 @@
                         <ul>
                             <li><strong>Center</strong>: Codelearn Terrassa</li>
                             <li><strong>Date</strong>: October 2019 - March 2020</li>
-                            <li><strong>Website</strong>: <a href="https://codelearn.cat/terrassa/"target="_blank">Enlace</a></li>
+                            <li><strong>Website</strong>: <a href="https://codelearn.cat/terrassa/"target="_blank">Link</a></li>
                             <li><strong>Report</strong>: <a href="https://docs.google.com/document/d/1uPu93QQ37xcRnlxq-NtlNM8iSjiUVRbTI4d2C7AymHg/preview"
                                 target="_blank">English version not ready yet, link to Spanish version</a></li>
                         </ul>
