--- a/training/WorkCenterTraining1.html
+++ b/training/WorkCenterTraining1.html
@@ -50,8 +50,8 @@
                         <h2 style="color:#12d640">Work Center Training - Happy Customer Box</h2>
                         <ul>
                             <li><strong>Center</strong>: Happy Customer Box</li>
-                            <li><strong>Date</strong>: October 2019 - Actually</li>
-                            <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Enlace</a></li>
+                            <li><strong>Date</strong>: October 2019 - Currently</li>
+                            <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Link</a></li>
                         </ul>
                         <p>
                             Happy Customer Box is a technology start-up that helps manage customer feedback.<br>
