--- a/ca.html
+++ b/ca.html
@@ -113,16 +113,13 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en
-            Sistemes Microinformàtics i Xarxes que busca continuar
-            formant-se en el món de la programació.
-            En un futur m'agradaria seguir formant-me, estudiant els graus superiors <i>Desenvolupament d'Aplicacions
-              Web</i> i <i>Administració de Sistemes Informàtics
-              en Xarxa</i>.
+            Sistemes Microinformàtics i Xarxes que busca continuar formant-se en el món de la programació.<br>
+            En un futur m'agradaria estudianr els graus superiors <i>Desenvolupament d'Aplicacions Web</i> i 
+            <i>Administració de Sistemes Informàtics en Xarxa</i>.
           </p>
           <p>
             Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a
-            poder continuar adquirint coneixements
-            i formar-se com a futur tècnic informàtic i programador.
+            poder continuar adquirint coneixements i formar-se com a futur tècnic informàtic i programador.
           </p>
           <div class="row">
             <div class="col-lg-6">
