--- a/index.html
+++ b/index.html
@@ -113,16 +113,13 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Estudiante de ciclo formativo grado superior en Desarrollo de Aplicaciones Multiplataforma y técnico en
-            Sistemas
-            Microinformáticos y Redes que busca seguir formándose en el mundo de la programación. En un futuro me
-            gustaría seguir formandome,
-            estudiando los grados superiores: <i>Desarrollo de Aplicaciones Web</i> y <i>Administración de Sistemas
-              Informáticos en Red</i>.
+            Sistemas Microinformáticos y Redes que busca seguir formándose en el mundo de la programación. <br>
+            En un futuro me gustaría estudiar los grados superiores: <i>Desarrollo de Aplicaciones Web</i> y 
+            <i>Administración de Sistemas Informáticos en Red</i>.
           </p>
           <p>
             Soy una persona responsable, educada y trabajadora que lo que busca es intentar ganar experiencia para poder
-            seguir
-            adquiriendo conocimientos, formándose como futuro técnico informático y programador.
+            seguir adquiriendo conocimientos, formándose como futuro técnico informático y programador.
           </p>
           <div class="row">
             <div class="col-lg-6">
