--- a/en.html
+++ b/en.html
@@ -113,10 +113,9 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Student of an Upper Degree Formative Cycle in Cross-platform Application Development and Microcomputer
-            Systems and Network Technician who seeks to
-            continue training in the world of programming. In the future I would like to continue training, studying the
-            higher degrees:
+            Student of a Higher Professional Training Degree in Cross-platform Application Development and Microcomputer
+            Systems and Network Technician who seeks to continue training in the world of programming.<br>
+            In the future I would like to study the higher degrees:
             <i>Web Application Development</i> and <i>Administration of Networked Computer Systems.</i>.
           </p>
           <p>
@@ -196,7 +195,7 @@
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
             <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
                 Copernic Institute</a><br> </h4>
-            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Higher Degree Training Cycle</em></p>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Higher Professional Training Degree</em></p>
             <h5 style="text-align:left;padding: 0px 10px;">September 2020 - Present</h5>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cross-platform Application Development</h6>
             <ul style="text-align:left;color:#fff;">
@@ -221,7 +220,7 @@
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
             <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
                 Copernic Institute</a><br> </h4>
-            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Intermediate Degree Training Cycle</em></p>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Intermediate Professional Training Degree</em></p>
             <h5 style="text-align:left;padding: 0px 10px;">September 2028 - June 2020</h5>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Microcomputer Systems and Networks</h6>
             <ul style="text-align:left;color:#fff;">
