--- a/ca.html
+++ b/ca.html
@@ -114,7 +114,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en
             Sistemes Microinformàtics i Xarxes que busca continuar formant-se en el món de la programació.<br>
-            En un futur m'agradaria estudianr els graus superiors <i>Desenvolupament d'Aplicacions Web</i> i 
+            En un futur m'agradaria estudiar els graus superiors <i>Desenvolupament d'Aplicacions Web</i> i 
             <i>Administració de Sistemes Informàtics en Xarxa</i>.
           </p>
           <p>
