--- a/en.html
+++ b/en.html
@@ -380,7 +380,7 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <!--<li data-filter="*" class="filter-active">All</li>-->
-            <li data-filter=".filter-app">Applicación Android</li>
+            <li data-filter=".filter-app">Android Application</li>
             <!--<li data-filter=".filter-project">Project</li>-->
           </ul>
         </div>
