--- a/ca.html
+++ b/ca.html
@@ -332,6 +332,15 @@
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
+          div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
+                style="color:#12d640">Casa del llibre</a><br> </h4>
+            <h5 style="text-align:left;">Abril 2022 - Abril 2022</h5>
+            <p style="text-align:left;color:#fff"><em>Venedor de llibres, Terrassa, Espanya</em></p>
+            <ul style="text-align:left;">
+              <li>Venda y promoció de llibres en parada a peu de carrer en la díada de Sant Jordi.</li>
+            </ul>
+          </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
                 style="color:#12d640">Casa del llibre</a><br> </h4>
