--- a/en.html
+++ b/en.html
@@ -329,6 +329,15 @@
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
+                style="color:#12d640">Casa del libro</a><br> </h4>
+            <h5 style="text-align:left;">April 2022 - April 2022</h5>
+            <p style="text-align:left;color:#fff"><em>Bookseller, Terrassa, Spain </em></p>
+            <ul style="text-align:left;">
+              <li>Sales and promotion of books at street level stop in the day of Sant Jordi </li>
+            </ul>
+          </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
                 style="color:#12d640">Casa del libro</a><br> </h4>
