--- a/index.html
+++ b/index.html
@@ -547,11 +547,11 @@
               <a href="https://kotlinlang.org/"><img
                   src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-ar21.svg" alt="vectorlogo.zone"
                   height="90" width="120"></a>
-              <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
+              <!--<a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
                   alt="vectorlogo.zone" height="50" width="190"></a>
               <a href="https://www.javascript.com/"><img
                   src="https://www.vectorlogo.zone/logos/javascript/javascript-ar21.svg" alt="vectorlogo.zone"
-                  height="70" width="120"></a>
+                  height="70" width="120"></a>-->
             </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
