--- a/projects/Penjat_ca.html
+++ b/projects/Penjat_ca.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Penjat - Aplicació Android</title>
+    <title>Penjat - Android</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords"> 
 
@@ -49,16 +49,23 @@
                         <br>
                         <h2 style="color:#12d640">Penjat - Aplicació Android</h2>
                         <ul>
-                            <li><strong>Projecte GitHub</strong>:  <a href="https://www.happycustomerbox.com/es/" target="_blank">Enllaç</a></li>
+                            <li><strong>Projecte GitHub</strong>:  <a href="https://github.com/jcadafalch/Penjat" target="_blank">Enllaç</a></li>
                         </ul>
 
                         <p>
-                            Aquesta applicació va ser desenvolupada en el periode de la Formació en Centres de Treball a Happy Customer Box.
-                        </p>
+                            Aquesta aplicació va ser desenvolupada en el període de la Formació en Centres de Treball a Happy Customer Box.                        </p>
                         <p>
-                            L'applicació tracta del joc clàssic del penjat, amb més de 100 paraules permet que tinguis paraules per diverses estones de joc.<br>
-                            Inclou rànquing amb sistema de punts, ideal per als usuaris més competitius.<br/>
-                            <img src="/assets/img/project/jocPenjat.png" class="img-fluid" alt="">
+                            L'aplicació tracta del joc clàssic del penjat, amb més de 100 paraules permet que tinguis paraules per diverses estones de joc.
+                            Inclou rànquing amb sistema de punts, ideal per als usuaris més competitius<br/>
+                            <b>Tecnologies:</b><br>
+                            <ul>
+                                <li>Android Studio</li>
+                                <li>Kotlin</li>
+                                <li>Firebase Authentication</li>
+                                <li>Firebase Firestore</li>
+                            </ul>
+                            <br>
+                            <!--<img src="/asset/penjat_ca.jpg" class="img-fluid" alt="Imatge del joc">-->
 
                         </p>
                         
