--- a/projects/Penjat_en.html
+++ b/projects/Penjat_en.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Work Center Training - Happy Customer Box</title>
+    <title>Penjat - Android</title>
     <meta content="" name="descriptison">
-    <meta content="" name="keywords">
+    <meta content="" name="keywords"> 
 
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon">
@@ -47,33 +47,34 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Work Center Training - Happy Customer Box</h2>
+                        <h2 style="color:#12d640">Penjat - Android Application</h2>
                         <ul>
-                            <li><strong>Center</strong>: Happy Customer Box</li>
-                            <li><strong>Date</strong>: October 2019 - Currently</li>
-                            <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Link</a></li>
+                            <li><strong>Proyecto GitHub</strong>:  <a href="https://github.com/jcadafalch/Penjat" target="_blank">Enlace</a></li>
                         </ul>
+
                         <p>
-                            Happy Customer Box is a technology start-up that helps manage customer feedback.<br>
+                            This application was developed in the period of the Training in Work Centers at Happy Customer Box.
                         </p>
                         <p>
-                            <strong>Technologies used:</strong>
+                            The application is the classic game of hangman, with more than 100 words allows you to have words for several times of play.
+                            Includes ranking with points system, ideal for the most competitive users.<br/>
+                            <b>Technologies:</b><br>
                             <ul>
-                                <li>Android Studio (Kotlin)</li>
-                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
-                                <li>GitHub as version control</li>
-                                <li>Jira as project manager</li>
-                                <li>Slack as a communication tool with team members</li>
-                                <li>Agile Methodology </li>
+                                <li>Android Studio</li>
+                                <li>Kotlin</li>
+                                <li>Firebase Authentication</li>
+                                <li>Firebase Firestore</li>
                             </ul>
+                            <br>
+                            <!--<img src="/assets/img/project/penjat_en.jpg" class="img-fluid" alt="Imatge del joc">-->
+
                         </p>
                         
                     </div>
+                   
 
                 </div>
-
-            </div>
-        </div><!-- End Portfolio Details -->
+            </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
 
     <!-- Vendor JS Files -->
