--- a/projects/ZombieInfection_es.html
+++ b/projects/ZombieInfection_es.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Work Center Training - Happy Customer Box</title>
+    <title>Zombie Infection - Unity</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -36,6 +36,7 @@
     ======================================================== -->
 </head>
 
+
 <body data-gr-c-s-loaded="true">
 
     <!-- ======= Portfolio Details ======= -->
@@ -47,35 +48,39 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Work Center Training - Happy Customer Box</h2>
+                        <h2 style="color:#12d640">Zombie Infection - Unity</h2>
                         <ul>
-                            <li><strong>Center</strong>: Happy Customer Box</li>
-                            <li><strong>Date</strong>: October 2019 - Currently</li>
-                            <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Link</a></li>
+                            <li><strong>Proyecto GitHub</strong>: <a
+                                    href="https://github.com/jcadafalch/ZombieInfection" target="_blank">Enlace</a>
+                            </li>
                         </ul>
                         <p>
-                            Happy Customer Box is a technology start-up that helps manage customer feedback.<br>
+                            <b>Concepto:</b><br>
+                            El juego trata de un mundo donde el personaje principal trata de sobrevivir de una invasión
+                            zombi, donde ellos intentan envenenar al personaje principal para convertirlo en un zombi.
+                            <br><br>
+
+                            <b>Género</b><br>
+                            El género del juego se trata de: Supervivencia, Zombis, Disparos y Jugador único.
+                            <br><br>
+
+                            <b>Público objetivo</b><br>
+                            El juego está enfocado a un público a partir de dieciséis años, el cual le gusten los juegos
+                            de lucha contra zombis y supervivencia.
                         </p>
-                        <p>
-                            <strong>Technologies used:</strong>
-                            <ul>
-                                <li>Android Studio (Kotlin)</li>
-                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
-                                <li>GitHub as version control</li>
-                                <li>Jira as project manager</li>
-                                <li>Slack as a communication tool with team members</li>
-                                <li>Agile Methodology </li>
-                            </ul>
-                        </p>
-                        
+                        <p><b>NOTICE:</b> at the moment the following document is in Catalan, in the future it will be translated.</p>
+                        <br>
+                        <iframe
+                            src="https://docs.google.com/document/d/1eTsMdwkSIAcBH0c6dqAe_Bj73BX7Er2ClZIqEjuorgk/preview"
+                            height="100%" width="100%"></iframe>
+                        <p><br><br></p>
+
                     </div>
 
+
                 </div>
-
-            </div>
-        </div><!-- End Portfolio Details -->
+            </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
-
     <!-- Vendor JS Files -->
     <script async="" src="//www.google-analytics.com/analytics.js"></script>
     <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -91,7 +96,7 @@
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
 
-    <script>if (window.self == window.top) { (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-55234356-4', 'auto'); ga('send', 'pageview'); }</script>
+    <script>if (window.self == window.top) { (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-55234356-4', 'auto'); ga('send', 'pageview'); } </script>
 
 </body>
 
