--- a/training/FormacioCentreTreball1.html
+++ b/training/FormacioCentreTreball1.html
@@ -56,7 +56,17 @@
 
                         <p>
                             Hapy Customer Box és una start-up tecnològica que ajuda a gestionar l'opinió dels clients.<br>
-                            Creuen en les dades, ajuden a obtenir-les i processar-les.
+                        </p>
+                        <p>
+                            <strong>Tecnologies utilitzades:</strong>
+                            <ul>
+                                <li>Android Studio (Kotlin)</li>
+                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
+                                <li>GitHub com a control de versions</li>
+                                <li>Jira com a gestor de projecte</li>
+                                <li>Slack com a eina de comunicació amb integrants de l'equip.</li>
+                                <li>Metodologia Agile</li>
+                            </ul>
                         </p>
                     </div>
                    
