--- a/training/FormacionCentroTrabajo1.html
+++ b/training/FormacionCentroTrabajo1.html
@@ -55,7 +55,17 @@
                         </ul>
                         <p>
                             Hapy Customer Box es una start-up tecnológica que ayuda a gestionar la opinión de los clientes.<br>
-                            Creen en los datos, ayudan a obtenerlos y procesarlos.
+                        </p>
+                        <p>
+                            <strong>Tecnologías utilizadas:</strong>
+                            <ul>
+                                <li>Android Studio (Kotlin)</li>
+                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
+                                <li>GitHub como control de versiones</li>
+                                <li>Jira como gestor de proyecto</li>
+                                <li>Slack como herramienta de comunicación con integrantes del equipo.</li>
+                                <li>Metodología Agile</li>
+                            </ul>
                         </p>
                     </div>
 
